# mkdocs-zen-mode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/: mkdocs.yml
example/docs/: about.md  configuration.md  getting-started.md  index.md
mkdocs_zen_mode/: __init__.py  plugin.py
mkdocs_zen_mode/assets/: zen-mode.css  zen-mode.js
tests/: conftest.py  test_e2e.py  test_integration.py  test_plugin.py
